--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 A ToDo system based on the concepts of digital literacies from Mark Hurst's book Bit Literacy. 
 
 Programming exercise in php
+
+Designed to be installed on a company's servers
