Backend written but probably not working

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 A ToDo system based on the concepts of digital literacies from Mark Hurst's book Bit Literacy. 
 
-Programming exercise in php
+Programming exercise in Python, using the flask framework.
 
 Designed to be installed on a company's servers
